# pyiceberg-lambda-layer

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.github/workflows/: build-lambda-layer.yml
example/: .gitignore  data.tf  glue.tf  iam.tf  lambda.tf  s3.tf
example/lambdas/: index.py  pyproject.toml
