[tool.poetry]
name = "iceberg-lambda-layer"
version = "0.1.0"
description = ""
authors = ["tkasuz <funabashi800@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyiceberg = {extras = ["glue", "s3fs"], version = "^0.5.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
