[tool.poetry]
name = "lambdas"
version = "0.1.0"
description = ""
authors = ["tkasuz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyiceberg = {extras = ["glue", "s3fs"], version = "^0.5.1"}


[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.31.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
